--- a/index.html
+++ b/index.html
@@ -8,133 +8,9 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-            color: #343a40;
-            padding-bottom: 70px;
-            /* Margin bottom for fixed footer */
-            position: relative;
-            /* So footer can be positioned absolutely */
-            min-height: 100vh;
-            /* Ensure body covers full height of viewport */
-        }
-
-        .container {
-            margin-top: 50px;
-            text-align: center;
-        }
-
-        #image-label {
-            margin-bottom: 20px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            padding: 10px;
-            background-color: #fff;
-            max-width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .question-label {
-            font-size: 18px;
-            margin-bottom: 20px;
-            font-weight: bold;
-            color: #0078d7;
-            max-width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .options-frame {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-bottom: 20px;
-            width: 100%;
-        }
-
-        .option-button {
-            margin: 5px 10px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 8px;
-            background-color: #e0f7fa;
-            color: #00838f;
-            transition: background-color 0.3s, color 0.3s;
-            flex: 1 0 auto;
-            /* Distribute space evenly, and allow buttons to shrink if needed */
-            max-width: 300px;
-            /* But don't grow too large */
-        }
-
-        .option-button:hover {
-            background-color: #00838f;
-            color: #ffffff;
-        }
-
-        .next-button {
-            padding: 12px 25px;
-            font-size: 18px;
-            background-color: #28a745;
-            color: #ffffff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 10px;
-            display: none;
-            /* Hide initially */
-        }
-
-        .next-button:hover {
-            background-color: #218838;
-        }
-
-        #feedback {
-            margin-top: 20px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-
-        #progress {
-            margin-top: 20px;
-            font-size: 16px;
-            color: #6c757d;
-        }
-
-        .footer {
-            position: absolute;
-            /* Position absolutely relative to body */
-            bottom: 0;
-            width: 100%;
-            background-color: #b7d5f2;
-            /* Match body background */
-            text-align: center;
-            padding: 10px;
-            border-top: 1px solid #ddd;
-            color: #6c757d;
-        }
-
-        #try-again-button {
-            padding: 12px 25px;
-            font-size: 18px;
-            background-color: #007bff;
-            color: #ffffff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 20px;
-            display: none;
-        }
-
-        #try-again-button:hover {
-            background-color: #0056b3;
-        }
+      
     </style>
 </head>
 
